# macroquad-rhai-rapier2d-wasm-starter

./: Cargo.toml  index.html  web.sh
assets/: skeletron.json
assets/shaders/: default_frag.glsl  default_vert.glsl
script/: input.rhai
src/: aseprite.rs  main.rs  picking.rs  platformer_example.rs  transform.rs  units.rs
